--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+  <div class="contenedor">
   <header class="header-top">
 
     <div id="pagination" class="pagination">
@@ -17,5 +18,6 @@
   </header >
   <ul id="character-list"></ul>
     <script src="./js/script.js"></script>
-</body>
+  </div>
+  </body>
 </html>
